--- a/pickups.html
+++ b/pickups.html
@@ -234,8 +234,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Joe Burrow/Jaydon Blue</td>
+<td width=50>11/22</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
