--- a/roster.html
+++ b/roster.html
@@ -181,6 +181,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>DET</td><td>Jared Goff             </td></tr>
 <tr><td>IND</td><td>Daniel Jones           </td></tr>
+<tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
@@ -198,7 +199,6 @@
 <tr><td>JAX</td><td>Cam Little             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Tyler Shough           </td></tr>
-<tr><td>DAL</td><td>Jaydon Blue            </td></tr>
 <tr><td>CLE</td><td>Shedeur Sanders        </td></tr>
 <tr><td>IND</td><td>DJ Giddens             </td></tr>
 <tr><td>CLE</td><td>Harold Fannin          </td></tr>
