--- a/pickups.html
+++ b/pickups.html
@@ -106,8 +106,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Christian Watson/Marcus Mariota</td>
+<td width=50>11/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
