--- a/roster.html
+++ b/roster.html
@@ -64,7 +64,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>WAS</td><td>Jayden Daniels         </td></tr>
-<tr><td>WAS</td><td>Marcus Mariota         </td></tr>
 <tr><td>SEA</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>De'Von Achane          </td></tr>
@@ -75,6 +74,7 @@
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>ARI</td><td>Marvin Harrison        </td></tr>
 <tr><td>SEA</td><td>Cooper Kupp            </td></tr>
+<tr><td> GB</td><td>Christian Watson       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Evan Engram            </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
