--- a/week12.html
+++ b/week12.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (1)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>245</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>35</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Njigba</td>  <td></td><td align=right>280</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>75</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>125</td></tr>
+<tr><td>Jeanty</td>        <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>860</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>210</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>35</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>35</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Loop</td>          <td></td><td align=right>90</td></tr>
 <tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>395</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (2)</b></font></td></tr>
-<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mayfield</td>      <td></td><td align=right>50</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>45</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>40</td></tr>
+<tr><td>Rice</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>180</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>155</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>15</td></tr>
 <tr><td>TWarren</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>560</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Maye</td>          <td></td><td align=right>120</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>115</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>35</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Bates</td>         <td></td><td align=right>110</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>460</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Darnold</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Darnold</td>       <td></td><td align=right>185</td></tr>
 <tr><td>JHill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Borregales</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Borregales</td>    <td></td><td align=right>180</td></tr>
+<tr><td></td>              <td></td><td align=right>425</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (5)</b></font></td></tr>
 <tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>555</td></tr>
 <tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>145</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>40</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>5</td></tr>
+<tr><td>McMillan</td>      <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>845</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Tracy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>50</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>165</td></tr>
+<tr><td>Tracy</td>         <td></td><td align=right>60</td></tr>
 <tr><td>Pearsall</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Boutte</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>20</td></tr>
 <tr><td>MTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>330</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (8)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>65</td></tr>
+<tr><td>CBrown</td>        <td></td><td align=right>50</td></tr>
+<tr><td>EWilson</td>       <td></td><td align=right>150</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>130</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>120</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ward</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>120</td></tr>
+<tr><td>Ward</td>          <td></td><td align=right>160</td></tr>
+<tr><td></td>              <td></td><td align=right>795</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>115</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>130</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Little</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Shough</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Little</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Shough</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>255</td></tr>
+<tr><td>Judkins</td>       <td></td><td align=right>150</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Flowers</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>95</td></tr>
 <tr><td>BSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>605</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,45 +167,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>7410</font></td>
-    <td><font size=2>5655</font></td>
+    <td><font size=2>8255</font></td>
+    <td><font size=2>6080</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>7920</font></td>
-    <td><font size=2>6185</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8380</font></td>
+    <td><font size=2>6745</font></td>
     <td><font size=2>1255</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7640</font></td>
-    <td><font size=2>6810</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8140</font></td>
+    <td><font size=2>7415</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>285</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Steven(1)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7755</font></td>
+    <td><font size=2>8495</font></td>
+    <td><font size=2>860</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5945</font></td>
-    <td><font size=2>7900</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6370</font></td>
+    <td><font size=2>8745</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6895</font></td>
-    <td><font size=2>8100</font></td>
-    <td><font size=2>830</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -216,41 +216,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>8330</font></td>
-    <td><font size=2>7255</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>8660</font></td>
+    <td><font size=2>8050</font></td>
     <td><font size=2>1070</font></td>
-    <td><font size=2>340</font></td>
+    <td><font size=2>330</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7005</font></td>
-    <td><font size=2>7470</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7610</font></td>
+    <td><font size=2>7970</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6040</font></td>
-    <td><font size=2>6630</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6835</font></td>
+    <td><font size=2>6960</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5860</font></td>
-    <td><font size=2>6165</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6255</font></td>
+    <td><font size=2>7025</font></td>
     <td><font size=2>785</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6390</font></td>
-    <td><font size=2>7265</font></td>
+    <td><font size=2>6950</font></td>
+    <td><font size=2>7725</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
