--- a/freeagt.html
+++ b/freeagt.html
@@ -1,53 +1,54 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 11)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 12)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Joe Flacco             </td><td><font size=3>1085</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Joe Flacco             </td><td><font size=3>1135</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Mac Jones              </td><td><font size=3> 890</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Geno Smith             </td><td><font size=3> 820</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 760</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Geno Smith             </td><td><font size=3> 890</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 885</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Michael Penix          </td><td><font size=3> 675</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>JJ McCarthy            </td><td><font size=3> 565</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jake Browning          </td><td><font size=3> 470</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Kyler Murray           </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Davis Mills            </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tyler Huntley          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Joe Milton             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jake Browning          </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Kyler Murray           </td><td><font size=3> 460</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Davis Mills            </td><td><font size=3> 390</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 180</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Sean Tucker            </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Kenneth Gainwell       </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Kenneth Gainwell       </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>Ray Davis              </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>Bam Knight             </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 265</td></tr>
 <tr><td><font size=3>Isiah Pacheco          </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Chris Rodriguez        </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Bam Knight             </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Alvin Kamara           </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Kene Nwangwu           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Samaje Perine          </td><td><font size=3> 195</td></tr>
 <tr><td><font size=3>Emari Demercado        </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Brittain Brown         </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Emanuel Wilson         </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>Kendre Miller          </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>Devin Singletary       </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Braelon Allen          </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Parker Washington      </td><td><font size=3> 630</td></tr>
+<tr><td><font size=3>Parker Washington      </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 585</td></tr>
 <tr><td><font size=3>Tre Tucker             </td><td><font size=3> 560</td></tr>
-<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 410</td></tr>
 <tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>Marquise Brown         </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>Greg Dortch            </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>Malik Washington       </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>DeMario Douglas        </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Luke McCaffrey         </td><td><font size=3> 330</td></tr>
@@ -56,24 +57,23 @@
 <tr><td><font size=3>Keon Coleman           </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Marvin Mims            </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Josh Downs             </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 245</td></tr>
-<tr><td><font size=3>Roman Wilson           </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Michael Wilson         </td><td><font size=3> 250</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 380</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Jake Tonges            </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Darren Waller          </td><td><font size=3> 285</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>David Njoku            </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Davis Allen            </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Noah Fant              </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Daniel Bellinger       </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Luke Farrell           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Daniel Bellinger       </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Luke Farrell           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>13)</td><td><font size=3>Cade Otton             </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Charlie Kolar          </td><td><font size=3> 125</td></tr>
@@ -81,39 +81,39 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Will Reichard          </td><td><font size=3> 850</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>Cam Little             </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3> 970</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 875</td></tr>
+<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 815</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 795</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3> 750</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 735</td></tr>
 <tr><td><font size=3>Riley Patterson        </td><td><font size=3> 730</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 730</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 700</td></tr>
-<tr><td><font size=3>Matt Gay               </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 670</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>Andre Szmyt            </td><td><font size=3> 610</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 605</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 600</td></tr>
+<tr><td><font size=3>Andre Szmyt            </td><td><font size=3> 685</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 680</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 665</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 655</td></tr>
 <tr><td><font size=3>Joshua Karty           </td><td><font size=3> 460</td></tr>
 <tr><td><font size=3>John Parker Romo       </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 345</td></tr>
 <tr><td><font size=3>Graham Gano            </td><td><font size=3> 330</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Dylan Sampson          </td><td><font size=3> 330</td></tr>
 <tr><td><font size=3>Jaylin Lane            </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Kyle Williams          </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Jackson Hawes          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Isaac TeSlaa           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Pat Bryant             </td><td><font size=3> 140</td></tr>
 <tr><td><font size=3>Terrance Ferguson      </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Dylan Sampson          </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Elijah Arroyo          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Mitchell Evans         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Jaylin Noel            </td><td><font size=3>  85</td></tr>
 <tr><td><font size=3>Tre' Harris            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Gunnar Helm            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Savion Williams        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Gunnar Helm            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Isaiah Bond            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Konata Mumpfield       </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Raheim Sanders         </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
