--- a/week13.html
+++ b/week13.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (8)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
