--- a/week13.html
+++ b/week13.html
@@ -102,7 +102,7 @@
 <tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brosmer</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
