--- a/pickups.html
+++ b/pickups.html
@@ -342,7 +342,8 @@ Grant - Tyrone Tracy/Cam Skattebo (10/29)<br>
 Roger - Rashid Shaheed/Mike Evans (11/4)<br>
 Roger - Tory Horton/Travis Hunter (11/5)<br>
 States - Oronde Gadsden/Kyler Murray (11/5)<br>
-Matthew - Cam Little/JK Dobbins (11/18)
+Matthew - Cam Little/JK Dobbins (11/18)<br>
+Mike - Juwan Johnson/Sam LaPorta (11/27)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
