--- a/roster.html
+++ b/roster.html
@@ -50,8 +50,8 @@
 <tr><td>LAR</td><td>Davante Adams          </td></tr>
 <tr><td> KC</td><td>Rashee Rice            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DET</td><td>Sam LaPorta            </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
+<tr><td> NO</td><td>Juwan Johnson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td> SF</td><td>Eddy Pineiro           </td></tr>
