--- a/week14.html
+++ b/week14.html
@@ -11,7 +11,7 @@
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
@@ -26,9 +26,9 @@
 <tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Barner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
+<tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -38,7 +38,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (2)</b></font></td></tr>
 <tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JJohnson</td>      <td></td><td align=right>0</td></tr>
@@ -109,14 +109,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (9)</b></font></td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Loveland</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
