--- a/thousand.html
+++ b/thousand.html
@@ -63,6 +63,12 @@
     <td>1360</td>
     <td>Roger</td>
     <td>895</td></tr>
+<tr><td>2025</td>
+    <td>Week 14</td>
+    <td>Matthew Edwards</td>
+    <td>1355</td>
+    <td>John</td>
+    <td>390</td></tr>
 <tr><td>2002</td>
     <td>Week 13</td>
     <td>Randy Edwards</td>
