--- a/pickups.html
+++ b/pickups.html
@@ -343,7 +343,8 @@ Roger - Rashid Shaheed/Mike Evans (11/4)<br>
 Roger - Tory Horton/Travis Hunter (11/5)<br>
 States - Oronde Gadsden/Kyler Murray (11/5)<br>
 Matthew - Cam Little/JK Dobbins (11/18)<br>
-Mike - Juwan Johnson/Sam LaPorta (11/27)
+Mike - Juwan Johnson/Sam LaPorta (11/27)<br>
+John - Dalton Schultz/Zach Ertz (12/11)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
