--- a/roster.html
+++ b/roster.html
@@ -221,7 +221,7 @@
 <tr><td>DAL</td><td>George Pickens         </td></tr>
 <tr><td> SF</td><td>Jauan Jennings         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>WAS</td><td>Zach Ertz              </td></tr>
+<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Joey Slye              </td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
