--- a/roster.html
+++ b/roster.html
@@ -111,11 +111,11 @@
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
+<tr><td>LAR</td><td>Harrison Mevis         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Tyler Loop             </td></tr>
 <tr><td> TB</td><td>Emeka Egbuka           </td></tr>
 <tr><td>HOU</td><td>Jayden Higgins         </td></tr>
-<tr><td>MIN</td><td>Max Brosmer            </td></tr>
 </table>
 </td>
 <td valign=top>
