--- a/week15.html
+++ b/week15.html
@@ -97,12 +97,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
+<tr><td>JWarren</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mevis</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
