--- a/roster.html
+++ b/roster.html
@@ -180,7 +180,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>DET</td><td>Jared Goff             </td></tr>
-<tr><td>IND</td><td>Daniel Jones           </td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Derrick Henry          </td></tr>
@@ -192,6 +191,7 @@
 <tr><td>WAS</td><td>Deebo Samuel           </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>DEN</td><td>Troy Franklin          </td></tr>
+<tr><td>NYG</td><td>Wan'Dale Robinson      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
