--- a/week15.html
+++ b/week15.html
@@ -132,7 +132,7 @@
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Ayomanor</td>      <td></td><td align=right>0</td></tr>
+<tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -142,11 +142,11 @@
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>WRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Shough</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
