--- a/thousand.html
+++ b/thousand.html
@@ -291,6 +291,12 @@
     <td>1190</td>
     <td>Steve</td>
     <td>240</td></tr>
+<tr><td>2025</td>
+    <td>Week 15</td>
+    <td>Randy Edwards</td>
+    <td>1190</td>
+    <td>Steven</td>
+    <td>565</td></tr>
 <tr><td>2003</td>
     <td>Week 14</td>
     <td>Brian Crooch</td>
@@ -459,6 +465,12 @@
     <td>1140</td>
     <td>Rich</td>
     <td>605</td></tr>
+<tr><td>2025</td>
+    <td>Week 15</td>
+    <td>Grant Mydland</td>
+    <td>1140</td>
+    <td>States</td>
+    <td>365</td></tr>
 <tr><td>2000</td>
     <td>Week 8</td>
     <td>Grant Mydland</td>
