--- a/roster.html
+++ b/roster.html
@@ -207,8 +207,8 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (8)</b></font></td></tr>
-<tr><td> KC</td><td>Patrick Mahomes        </td></tr>
 <tr><td>NYJ</td><td>Justin Fields          </td></tr>
+<tr><td>ARI</td><td>Jacoby Brissett        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
 <tr><td>CAR</td><td>Chuba Hubbard          </td></tr>
