--- a/pickups.html
+++ b/pickups.html
@@ -345,7 +345,8 @@ States - Oronde Gadsden/Kyler Murray (11/5)<br>
 Matthew - Cam Little/JK Dobbins (11/18)<br>
 Mike - Juwan Johnson/Sam LaPorta (11/27)<br>
 John - Dalton Schultz/Zach Ertz (12/11)<br>
-Matthew - Wan'Dale Robinson/Daniel Jones (12/14)
+Matthew - Wan'Dale Robinson/Daniel Jones (12/14)<br>
+John - Jacoby Brissett/Patrick Mahomes (12/17)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
