--- a/thousand.html
+++ b/thousand.html
@@ -945,6 +945,12 @@
     <td>1045</td>
     <td>-</td>
     <td>-</td></tr>
+<tr><td>2025</td>
+    <td>Week 16</td>
+    <td>Sam Edwards</td>
+    <td>1045</td>
+    <td>Mike</td>
+    <td>470</td></tr>
 <tr><td>2002</td>
     <td>Week 4</td>
     <td>John Heinzelmann</td>
@@ -1221,6 +1227,12 @@
     <td>1015</td>
     <td>-</td>
     <td>-</td></tr>
+<tr><td>2025</td>
+    <td>Week 16</td>
+    <td>Steven Cohen</td>
+    <td>1015</td>
+    <td>Rich</td>
+    <td>380</td></tr>
 <tr><td>1998</td>
     <td>Week 11</td>
     <td>Matthew Edwards</td>
