--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -75,42 +76,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>9720</font></td>
-    <td><font size=2>7755</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>10100</font></td>
+    <td><font size=2>8770</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11295</font></td>
-    <td><font size=2>8575</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>11750</font></td>
+    <td><font size=2>9305</font></td>
     <td><font size=2>1255</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10610</font></td>
-    <td><font size=2>9215</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>11520</font></td>
+    <td><font size=2>9835</font></td>
     <td><font size=2>1355</font></td>
     <td><font size=2>285</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>8055</font></td>
-    <td><font size=2>10670</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>8675</font></td>
+    <td><font size=2>11580</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9025</font></td>
-    <td><font size=2>11555</font></td>
-    <td><font size=2>860</font></td>
+    <td><font size=2>10040</font></td>
+    <td><font size=2>11935</font></td>
+    <td><font size=2>1015</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
@@ -123,41 +124,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10830</font></td>
-    <td><font size=2>9660</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>11280</font></td>
+    <td><font size=2>10655</font></td>
     <td><font size=2>1140</font></td>
     <td><font size=2>330</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9580</font></td>
-    <td><font size=2>9505</font></td>
+    <td><font size=2>10575</font></td>
+    <td><font size=2>9955</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8895</font></td>
-    <td><font size=2>9250</font></td>
+    <td><font size=2>9625</font></td>
+    <td><font size=2>9705</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7740</font></td>
-    <td><font size=2>8495</font></td>
-    <td><font size=2>785</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8785</font></td>
+    <td><font size=2>8965</font></td>
+    <td><font size=2>1045</font></td>
     <td><font size=2>255</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>8580</font></td>
-    <td><font size=2>9650</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>9050</font></td>
+    <td><font size=2>10695</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
