--- a/roster.html
+++ b/roster.html
@@ -140,7 +140,7 @@
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Chase McLaughlin       </td></tr>
-<tr><td>IND</td><td>Mike Badgley           </td></tr>
+<tr><td>BUF</td><td>Mike Badgley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Tetairoa McMillan      </td></tr>
 <tr><td>TEN</td><td>Elic Ayomanor          </td></tr>
