--- a/week17.html
+++ b/week17.html
@@ -26,7 +26,7 @@
 <tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Shaheed</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Barner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
