--- a/roster.html
+++ b/roster.html
@@ -163,11 +163,11 @@
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td> SF</td><td>Ricky Pearsall         </td></tr>
 <tr><td>LAC</td><td>Quentin Johnston       </td></tr>
-<tr><td> NE</td><td>Kayshon Boutte         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
+<tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>RJ Harvey              </td></tr>
 <tr><td>NYJ</td><td>Mason Taylor           </td></tr>
