--- a/week17.html
+++ b/week17.html
@@ -42,7 +42,7 @@
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
