--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a>
+<a href="week18.html"><b>18P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -77,15 +78,15 @@
 <tr><td><font size=2>Rich(5)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10100</font></td>
+    <td><font size=2>10270</font></td>
     <td><font size=2>8770</font></td>
     <td><font size=2>945</font></td>
-    <td><font size=2>280</font></td>
+    <td><font size=2>170</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11750</font></td>
+    <td><font size=2>12485</font></td>
     <td><font size=2>9305</font></td>
     <td><font size=2>1255</font></td>
     <td><font size=2>265</font></td>
@@ -93,15 +94,15 @@
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>11520</font></td>
+    <td><font size=2>12395</font></td>
     <td><font size=2>9835</font></td>
     <td><font size=2>1355</font></td>
     <td><font size=2>285</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8675</font></td>
+    <td><font size=2>9385</font></td>
     <td><font size=2>11580</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
@@ -109,7 +110,7 @@
 <tr><td><font size=2>Steven(1)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>10040</font></td>
+    <td><font size=2>10490</font></td>
     <td><font size=2>11935</font></td>
     <td><font size=2>1015</font></td>
     <td><font size=2>335</font></td>
@@ -125,7 +126,7 @@
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11280</font></td>
+    <td><font size=2>11990</font></td>
     <td><font size=2>10655</font></td>
     <td><font size=2>1140</font></td>
     <td><font size=2>330</font></td>
@@ -133,7 +134,7 @@
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10575</font></td>
+    <td><font size=2>11400</font></td>
     <td><font size=2>9955</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
@@ -141,7 +142,7 @@
 <tr><td><font size=2>John(8)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9625</font></td>
+    <td><font size=2>10350</font></td>
     <td><font size=2>9705</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>270</font></td>
@@ -149,7 +150,7 @@
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8785</font></td>
+    <td><font size=2>9165</font></td>
     <td><font size=2>8965</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>255</font></td>
@@ -157,7 +158,7 @@
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9050</font></td>
+    <td><font size=2>9610</font></td>
     <td><font size=2>10695</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
