--- a/roster.html
+++ b/roster.html
@@ -191,7 +191,7 @@
 <tr><td>WAS</td><td>Deebo Samuel           </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>DEN</td><td>Troy Franklin          </td></tr>
-<tr><td>NYG</td><td>Wan'Dale Robinson      </td></tr>
+<tr><td>ARI</td><td>Michael Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
