--- a/week18.html
+++ b/week18.html
@@ -21,15 +21,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Shaheed</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Barner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Cook (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Hampton (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Nacua (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kincaid (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -128,12 +128,12 @@
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kittle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Little</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Shough</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
