--- a/week18.html
+++ b/week18.html
@@ -111,12 +111,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ewers</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
